# owl2terminus

./: README.md  owl2terminus  pyproject.toml
